--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>FPS Lucu - Buat Kamu</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <canvas id="gameCanvas"></canvas>
+  <div id="score">Score: 0</div>
+  <div id="message" class="hidden">
+    <h1>Selamat sayang! ❤️</h1>
+    <p>Kamu berhasil! Tapi ada satu misi lagi:<br><strong>Tetaplah bersamaku selamanya.</strong><br><br>
+    Dari orang yang selalu mikirin kamu tiap hari 💌</p>
+  </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r148/three.min.js"></script>
+  <script src="main.js"></script>
+</body>
+</html>
