--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FPS Lucu - Buat Kamu</title>
-  <link rel="stylesheet" href="style.css" />
+    <title>Game Kejutan Untuk [Nama Pacar]</title>
+    <style>
+        body { margin: 0; overflow: hidden; background-color: #add8e6; } /* Warna langit */
+        canvas { display: block; }
+        #message-box {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 15px 30px;
+            border-radius: 10px;
+            font-family: Arial, sans-serif;
+            font-size: 24px;
+            text-align: center;
+            opacity: 0; /* Awalnya tersembunyi */
+            transition: opacity 0.5s ease-in-out;
+            z-index: 1000;
+        }
+    </style>
 </head>
 <body>
-  <canvas id="gameCanvas"></canvas>
-  <div id="score">Score: 0</div>
-  <div id="message" class="hidden">
-    <h1>Selamat sayang! ❤️</h1>
-    <p>Kamu berhasil! Tapi ada satu misi lagi:<br><strong>Tetaplah bersamaku selamanya.</strong><br><br>
-    Dari orang yang selalu mikirin kamu tiap hari 💌</p>
-  </div>
+    <canvas id="gameCanvas"></canvas>
+    <div id="message-box"></div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r148/three.min.js"></script>
-  <script src="main.js"></script>
-</body>
+    <script src="script.js"></script> </body>
 </html>
